# HUE26.1.3-satya-charan-v-python-genai

./: .env.example  .gitignore  HUE 25.11.1 Python+GenAI Assignment.docx  README.md  SETUP.md  UI_NAVIGATION.md  docker-compose.yml  project_requirements.txt  pyproject.toml  requirements.txt  run_backend.bat  run_frontend.bat  run_mcpserver.bat
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_analysis_templates.py  0002_analysis_interactions.py  0003_merge_heads.py
mcp_server/: README.md  app.py
scripts/: init_db.py  seed_admin.py
src/: __init__.py  database.py  main.py
src/api/: deps.py
src/api/v1/: admin.py  (+7 more)
src/core/: config.py  exceptions.py  logging_config.py  security.py
src/models/: __init__.py  analysis.py  analysis_template.py  base.py  code_chunk.py  project.py  repository_metadata.py  user.py
src/prompts/: diagram_conventions.json  pm_system.json  pm_user.json  sde_system.json  sde_user.json
src/schemas/: __init__.py  admin.py  auth.py  metadata.py  project.py
src/services/: __init__.py  analysis_orchestrator.py  analysis_progress.py  analysis_qa.py  analysis_runner.py  code_chunker.py  code_parser.py  export_service.py  langfuse_client.py  mcp_client.py  project_service.py  repository_analyzer.py  semantic_search.py  storage.py  usage_tracker.py
streamlit_app/: __init__.py  main.py
streamlit_app/pages/: 1_Login.py  2_Dashboard.py  3_Results.py  4_Analysis_Console.py  4_Projects.py  5_Documentation.py  6_Admin_Dashboard.py
streamlit_app/utils/: __init__.py  api_client.py  auth.py  mermaid_renderer.py  validation.py
(+9 files in other folders)
