[project]
name = "macad-system"
version = "0.1.0"
description = "Multi-Agent Code Analysis & Documentation System"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "streamlit>=1.28.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "websockets>=12.0",
    "langgraph>=0.2.0",
    "markdown>=3.5.0",
    "weasyprint>=60.0",
    "reportlab>=4.0.0",
    "streamlit-mermaid>=0.3.0",
    "fastmcp>=2.0.0",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "aiosqlite>=0.20.0",
    "langfuse>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
